fix: This PR aligns the text height in the input field so it matches the select field

--- a/src/components/Field/Field.css
+++ b/src/components/Field/Field.css
@@ -24,8 +24,8 @@
 .dcl.field .ui.input input,
 .ui.form .dcl.field .ui.input input {
   padding: 0px;
-  padding-bottom: 12px;
-  padding-top: 4px;
+  padding-bottom: 7px;
+  padding-top: 10px;
   font-size: 20px;
   line-height: 28px;
   font-weight: 500;
